fix(z-toast-notification): fix close icon; don't force min-height; baseline alignment as per design

--- a/src/components/z-toast-notification/styles.css
+++ b/src/components/z-toast-notification/styles.css
@@ -1,9 +1,19 @@
 :host {
-  display: inline-block;
-  width: 100vw;
-  min-width: 200px;
-
   --percentuale: 0;
+
+  display: flex;
+  width: 100%;
+  min-width: 200px;
+  max-width: 100dvw;
+  box-sizing: border-box;
+  background: var(--color-surface01);
+  border-radius: var(--border-size-large);
+  box-shadow: var(--shadow-3);
+  color: var(--color-default-text);
+  fill: var(--color-primary01-icon);
+  font-family: var(--font-family-sans);
+  font-size: var(--font-size-2);
+  font-weight: var(--font-rg);
 }
 
 :host(.slide-in-left) {
@@ -44,6 +54,116 @@
 :host(.slide-out-up) {
   animation: slideoutup 0.5s cubic-bezier(0.25, 0.1, 0.25, 0.1);
   animation-fill-mode: forwards;
+}
+
+.toast-notification-container {
+  display: flex;
+  width: 100%;
+  align-items: baseline;
+  justify-content: space-between;
+  padding: calc(var(--space-unit) * 2);
+  border-radius: var(--border-radius);
+  gap: calc(var(--space-unit) * 2);
+}
+
+.toast-notification-content {
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+  align-items: baseline;
+  justify-content: space-between;
+  gap: calc(var(--space-unit) * 2);
+}
+
+.toast-notification-content .toast-notification-text {
+  color: inherit;
+  letter-spacing: 0.16px;
+  line-height: 1.25rem;
+}
+
+.toast-notification-content .toast-notification-text .title {
+  margin-right: calc(var(--space-unit) / 2);
+  font-weight: var(--font-sb);
+}
+
+.close-button {
+  height: 1.125rem; /* same height of the icon */
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.close-button z-icon {
+  --z-icon-width: 1.125rem;
+  --z-icon-height: 1.125rem;
+
+  display: inline-block;
+  height: 1.25rem;
+}
+
+.close-button:focus:focus-visible {
+  border-radius: 50%;
+  box-shadow: var(--shadow-focus-primary);
+  outline: none;
+}
+
+:host(.dark) {
+  background: var(--color-surface05);
+  color: var(--color-text-inverse);
+  fill: var(--color-inverse-icon);
+}
+
+:host(.dark) .close-button:focus:focus-visible {
+  box-shadow:
+    0 0 0 2px var(--gray900),
+    0 0 2px 5px var(--blue25);
+}
+
+:host(.accent) {
+  background: var(--color-primary01);
+}
+
+:host(.error) {
+  background: var(--color-default-error);
+}
+
+:host(.success) {
+  background: var(--color-default-success);
+}
+
+:host(.warning) {
+  background: var(--color-default-warning);
+}
+
+:host(.accent),
+:host(.error),
+:host(.success) {
+  color: var(--color-text-inverse);
+  fill: var(--color-inverse-icon);
+}
+
+:host(.warning) .close-button {
+  fill: var(--color-default-icon);
+}
+
+/* Tablet breakpoint */
+@media (min-width: 768px) {
+  :host {
+    width: fit-content;
+    max-width: 50vw;
+  }
+
+  .toast-notification-content {
+    flex-wrap: nowrap;
+  }
+}
+
+/* Wide breakpoint */
+@media (min-width: 1366px) {
+  :host {
+    max-width: 33vw;
+  }
 }
 
 @keyframes slideinleft {
@@ -137,125 +257,5 @@
   100% {
     opacity: 0;
     transform: translateY(100%);
-  }
-}
-
-:host > #external-container {
-  display: flex;
-  min-height: calc(var(--space-unit) * 8.5);
-  box-sizing: border-box;
-  justify-content: space-between;
-  padding: calc(var(--space-unit) * 2) 14px calc(var(--space-unit) * 2) calc(var(--space-unit) * 2);
-  border-radius: var(--border-size-large);
-  box-shadow: var(--shadow-3);
-  font-family: var(--font-family-sans);
-  font-size: var(--font-size-2);
-  font-weight: var(--font-rg);
-  letter-spacing: 0.16px;
-}
-
-:host > #external-container > #inner-container {
-  display: flex;
-  width: 100%;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-:host > #external-container #inner-container #text {
-  padding: var(--space-unit) 0;
-  color: var(--color-text-inverse);
-  letter-spacing: 0.16px;
-  line-height: 20px;
-  text-align: start;
-}
-
-:host > #external-container #inner-container #text > .title {
-  margin-right: calc(var(--space-unit) / 2);
-  font-weight: var(--font-sb);
-}
-
-:host > #external-container #inner-container ::slotted([slot="button"]) {
-  margin-top: var(--space-unit);
-}
-
-:host > #external-container #icon {
-  padding-top: var(--space-unit);
-  margin: 0 calc(var(--space-unit) / 4);
-  cursor: pointer;
-  fill: var(--color-inverse-icon);
-}
-
-:host > #external-container #icon:focus-within {
-  margin: 0;
-}
-
-:host > #external-container #icon z-icon {
-  margin: 0 0 0 14px;
-}
-
-:host > #external-container #icon z-icon:focus {
-  display: inline-block;
-  padding: calc(var(--space-unit) / 4);
-  border-radius: 50%;
-  box-shadow: var(--shadow-focus-primary);
-}
-
-:host > #external-container.dark {
-  background: var(--color-surface05);
-}
-
-:host > #external-container.light {
-  background: var(--color-surface01);
-}
-
-:host > #external-container.light #icon {
-  fill: var(--color-primary01-icon);
-}
-
-:host > #external-container.light #inner-container #text,
-:host > #external-container.warning #inner-container #text {
-  color: var(--color-default-text);
-}
-
-:host > #external-container.accent {
-  background: var(--color-primary01);
-}
-
-:host > #external-container.error {
-  background: var(--color-default-error);
-}
-
-:host > #external-container.success {
-  background: var(--color-default-success);
-}
-
-:host > #external-container.warning {
-  background: var(--color-default-warning);
-}
-
-:host > #external-container.warning #icon {
-  fill: var(--color-default-icon);
-}
-
-/* Tablet breakpoint */
-@media (min-width: 768px) {
-  :host {
-    width: unset;
-    max-width: 50vw;
-  }
-
-  :host > #external-container #inner-container {
-    flex-direction: row;
-  }
-
-  :host > #external-container #inner-container ::slotted([slot="button"]) {
-    margin: 0 0 0 calc(var(--space-unit) * 2);
-  }
-}
-
-/* Wide breakpoint */
-@media (min-width: 1366px) {
-  :host {
-    max-width: 33vw;
   }
 }
